regression/fail/modules.11.sml
structure S:
   sig
      datatype t = T
   end =
   struct
      type t = int
   end
